Fix ul spacing

--- a/app/styles/components/post-view.scss
+++ b/app/styles/components/post-view.scss
@@ -52,10 +52,6 @@
     h2:nth-of-type(1) {
       padding-top: 0px;
     }
-
-    p:last-of-type {
-      margin: 0;
-    }
   }
 
   blockquote {
